[attribute] alignment issue for checkbox in ItemForm and Selection moved alignment into CSS

--- a/packages/gephi-lite/src/styles/_data-table.scss
+++ b/packages/gephi-lite/src/styles/_data-table.scss
@@ -184,3 +184,9 @@ $table-editable-columns-cell-hover-bg: color-mix(
     }
   }
 }
+
+.data-cell {
+  .form-check {
+    @extend .ms-1;
+  }
+}
